kustomize/overlays/production/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: website
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: website
            port:
              number: 3000
    host: website.140.238.216.140.nip.io
